fix: navbar is not responsive in the simulator section

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -5,7 +5,7 @@
     position: relative;
     top: 0;
     width: 100%;
-    z-index: 100;
+    z-index: 999;
 }
 .header {
     background: var(--bg-navbar);
