--- a/src/styles/css/main.stylesheet.css
+++ b/src/styles/css/main.stylesheet.css
@@ -650,9 +650,9 @@ div.icon img {
     /* height: 23.5px; */
     display: block;
     align-items: center;
-    z-index: 99;
-    /* position: absolute;
-    top: 47px; */
+    z-index: 999;
+    position: absolute;
+    /* top: 47px; */
 }
 
 .embed-tabs {
